CONFIGURAÇÂO- FONTWOSOME- FONT-GOOGLE

--- a/package.json
+++ b/package.json
@@ -10,7 +10,12 @@
     "build": "ionic-app-scripts build",
     "lint": "ionic-app-scripts lint"
   },
-  "dependencies": {
+  
+  "config": {    
+    "ionic_copy": "./config/copy.config.js",    
+    "ionic_sass": "./config/sass.config.js"  
+ },  
+ "dependencies": {
     "@angular/animations": "5.2.11",
     "@angular/common": "5.2.11",
     "@angular/compiler": "5.2.11",
@@ -24,6 +29,7 @@
     "@ionic-native/splash-screen": "~4.20.0",
     "@ionic-native/status-bar": "~4.20.0",
     "@ionic/storage": "2.2.0",
+    "font-awesome": "^4.7.0",
     "ionic-angular": "3.9.5",
     "ionicons": "3.0.0",
     "rxjs": "5.5.11",
